--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div>
         <ul>
-            <a href="http://127.0.0.1:5500/Quehacer.html"><li>Qué hacer</li></a>
+            <a href="Quehacer.html"><li>Qué hacer</li></a>
             <a href="http://127.0.0.1:5500/index.html"><li>Personajes</li></a>
             <a href="https://www.vulcanita.com.ar/categorias-home/categoria-bluey/"><li>Tienda</li></a>
         </ul>
@@ -61,7 +61,7 @@
     </div>
 
     <div class="conteinerdescription">
-        <img src="Media/Media/mama.png" alt="Chilli">
+        <img src="Media/mama.png" alt="Chilli">
         <div class="textintro">Chilli es la madre de Bluey y Bingo.  Recientemente regresó a su trabajo en 
             Seguridad aeroportuaria y hace malabares con la crianza de sus dos hijas pequeñas. 
             Mamá a menudo tiene un comentario bromista sobre las travesuras de sus hijas.</div>
